Updated scores and latex files

--- a/scores.ipynb
+++ b/scores.ipynb
@@ -47,8 +47,8 @@
     "# Setting the directories\n",
     "import os\n",
     "\n",
-    "wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'alldata/'\n",
+    "wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
@@ -167,9 +167,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_of_interest = 'Normalised/'\n",
+    "folder_of_interest = 'Pruned/'\n",
     "results_folder = os.getcwd() +'/results/' + folder_of_interest\n",
     "print (results_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For raw vs normalised \n",
+    "# chosen_result = np.load(results_folder + 'tf_nonnormalised_raw.npy')\n",
+    "# chosen_result = np.load(results_folder + 'tf_normalised.npy')\n",
+    "# chosen_result = np.load(results_folder + 'tf_atrven_normalised.npy')\n",
+    "# chosen_result = np.load(results_folder + 'torch_nonnormalised_raw.npy')\n",
+    "# chosen_result = np.load(results_folder + 'torch_normalised.npy')\n",
+    "# chosen_result = np.load(results_folder + 'torch_atrven_normalised.npy')\n",
+    "\n",
+    "# Whole vs Pruned\n",
+    "# chosen_result = np.load(results_folder + 'tf_whole.npy')\n",
+    "# chosen_result = np.load(results_folder + 'tf_pruned.npy')\n",
+    "chosen_result = np.load(results_folder + 'torch_whole.npy')\n",
+    "print(np.unique(chosen_result[0]))\n",
+    "# chosen_result = np.load(results_folder + 'torch_pruned.npy')\n",
+    "print(chosen_result.shape)"
    ]
   },
   {
@@ -180,16 +203,6 @@
    },
    "outputs": [],
    "source": [
-    "# chosen_result = np.load(results_folder + 'tf_nonnormalised_raw.npy')\n",
-    "chosen_result = np.load(results_folder + 'tf_normalised.npy')\n",
-    "# chosen_result = np.load(results_folder + 'tf_atrven_normalised.npy')\n",
-    "# chosen_result = np.load(results_folder + 'torch_nonnormalised_raw.npy')\n",
-    "# chosen_result = np.load(results_folder + 'torch_normalised.npy')\n",
-    "# chosen_result = np.load(results_folder + 'torch_atrven_normalised.npy')\n",
-    "\n",
-    "print(chosen_result.shape)\n",
-    "\n",
-    "\n",
     "dice_stats = []\n",
     "avg_thickness_list = []\n",
     "err_thickness_list = []\n",
@@ -219,11 +232,12 @@
     "    avg_thickness_list.append(avg_pred_thickness_list)\n",
     "    err_thickness_list.append(mean_abs_error_list)\n",
     "    sqrerr_thickness_list.append(mean_squared_error_list)\n",
-    "#     color = label_img_to_rgb(chosen_result[ind])\n",
+    "    color = label_img_to_rgb(chosen_result[ind])\n",
     "    \n",
     "#     axis_name = filenames[ind][4:-4]\n",
-    "\n",
+    "    \n",
     "#     f, axs = plt.subplots(1,3,figsize=(20,20))\n",
+    "#     print(axis_name)\n",
     "#     plt.suptitle(axis_name, size=14)\n",
     "#     plt.subplots_adjust(top=1.58)\n",
     "#     plt.subplot(131), plt.imshow(raw_images[ind], cmap = \"gray\")\n",
@@ -233,7 +247,7 @@
     "#     plt.subplot(133),plt.imshow(color)\n",
     "#     plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
     "    \n",
-    "#     plt.show()\n",
+    "    plt.show()\n",
     "\n",
     "dice_stats = np.asarray(dice_stats)\n",
     "avg_thickness_list = np.asarray(avg_thickness_list)\n",
@@ -252,11 +266,10 @@
     "            best_val = np.argmax(new_stats)\n",
     "            print('Best_val is at index: ', best_val)\n",
     "        val = round(np.average(new_stats),3)\n",
-    "        print(val)\n",
     "        averages.append(val)\n",
     "        print('Label: {} {}, Average Score: {}'.format(i, layers[i],averages[i]))\n",
     "    print('Average Scores', np.around(averages,3))\n",
-    "    print('Average Overall Score', np.average(averages))\n",
+    "    print('Average Overall Score', np.average(averages[1:]))\n",
     "    \n",
     "# Dice Stats\n",
     "print('Dice Stats\\n')\n",
@@ -275,7 +288,7 @@
     "# get_layer_stats(sqrerr_thickness_list)\n",
     "\n",
     "def get_layer_stats2(input_list):\n",
-    "    averages = []\n",
+    "    averages = [0]\n",
     "    for i in range(1,8):\n",
     "    #     ii = np.isfinite(overall_stats[:,i])\n",
     "        ii = input_list[:,i] > 0.001\n",
@@ -284,13 +297,84 @@
     "            best_val = np.argmax(new_stats)\n",
     "        val = round(np.average(new_stats),2)\n",
     "        averages.append(val)\n",
-    "    print('Average Scores', np.around(averages,2))\n",
+    "    print('Average Scores', np.around(averages[1:],2))\n",
     "# Dice Stats\n",
     "get_layer_stats2(dice_stats)\n",
     "# Avg Thickness Stats\n",
     "get_layer_stats2(avg_thickness_list)\n",
     "# Mean Error Thickness Stat\n",
     "get_layer_stats2(err_thickness_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEG_LABELS_LIST2 = [\n",
+    "    {\"id\": -1, \"name\": \"void\", \"rgb_values\": [0, 0, 0]},\n",
+    "    {\"id\": 0, \"name\": \"void\", \"rgb_values\": [255,0,0]}, # red\n",
+    "    {\"id\": 1, \"name\": \"Myocardium\", \"rgb_values\": [255,0,0]}, # red\n",
+    "    {\"id\": 2, \"name\": \"Endocardium\", \"rgb_values\": [0, 0, 255]}, # blue\n",
+    "    {\"id\": 3, \"name\": \"Fibrosis\", \"rgb_values\": [177,10,255]}, # purple\n",
+    "    {\"id\": 4, \"name\": \"Fat\", \"rgb_values\": [0, 255, 0]}, # green\n",
+    "    {\"id\": 5, \"name\": \"Dense Collagen\", \"rgb_values\": [177,10,255]}, # purple\n",
+    "    {\"id\": 6, \"name\": \"Loose Collagen\", \"rgb_values\": [255, 255, 0]}, # yellow\n",
+    "    {\"id\": 7, \"name\": \"Smooth Muscle\", \"rgb_values\": [255,0,255]}, # magenta/pink\n",
+    "    {\"id\": 8, \"name\": \"Smooth Muscle\", \"rgb_values\": [0, 0, 0]}\n",
+    "]; \n",
+    "\n",
+    "def label_img_to_rgb2(label_img):\n",
+    "    label_img = np.squeeze(label_img)\n",
+    "    labels = np.unique(label_img)\n",
+    "    label_infos = [l for l in SEG_LABELS_LIST2 if l['id'] in labels]\n",
+    "\n",
+    "    label_img_rgb = np.array([label_img,\n",
+    "                              label_img,\n",
+    "                              label_img]).transpose(1,2,0)\n",
+    "    for l in label_infos:\n",
+    "        mask = label_img == l['id']\n",
+    "        label_img_rgb[mask] = l['rgb_values']\n",
+    "\n",
+    "    return label_img_rgb.astype(np.uint8)\n",
+    "\n",
+    "\n",
+    "ind=5\n",
+    "color = label_img_to_rgb2(chosen_result[ind])\n",
+    "f, axs = plt.subplots(1,3,figsize=(20,20))\n",
+    "plt.subplot(131), plt.imshow(raw_images[ind], cmap = \"gray\")\n",
+    "plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(132), plt.imshow(manual_labels[ind])\n",
+    "plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(133),plt.imshow(color)\n",
+    "plt.title('Automated Label'), plt.xticks([]), plt.yticks([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_layer_stats(input_list):\n",
+    "    averages = [0]\n",
+    "    for i in range(1,8):\n",
+    "    #     ii = np.isfinite(overall_stats[:,i])\n",
+    "        ii = input_list[:,i] > 0.001\n",
+    "        new_stats = input_list[:,i][ii]\n",
+    "        if len(new_stats)>0:\n",
+    "            best_val = np.argmax(new_stats)\n",
+    "            print('Best_val is at index: ', best_val)\n",
+    "        val = round(np.average(new_stats),3)\n",
+    "        averages.append(val)\n",
+    "        print('Label: {} {}, Average Score: {}'.format(i, layers[i],averages[i]))\n",
+    "    print('Average Scores', np.around(averages,3))\n",
+    "    print('Average Overall Score', np.average(averages[1:]))\n",
+    "    \n",
+    "# Dice Stats\n",
+    "print('Dice Stats\\n')\n",
+    "get_layer_stats(dice_stats)\n"
    ]
   },
   {
