made prediction with on kernel size

--- a/tensorflow_make_predictions.ipynb
+++ b/tensorflow_make_predictions.ipynb
@@ -104,41 +104,41 @@
     "weight_decay = 0.0001\n",
     "# Defines the input tensor\n",
     "inputs = Input(shape=(h,w,1))\n",
-    "\n",
-    "L1 = Conv2D(64,kernel_size=(3,3),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(inputs)\n",
+    "k,s = 5,5\n",
+    "L1 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(inputs)\n",
     "L2 = BatchNormalization()(L1)\n",
     "L2 = Activation('relu')(L2)\n",
     "#L3 = Lambda(maxpool_1,output_shape = shape)(L2)\n",
     "L3 = MaxPooling2D(pool_size=(2,2))(L2)\n",
-    "L4 = Conv2D(64,kernel_size=(3,3),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L3)\n",
+    "L4 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L3)\n",
     "L5 = BatchNormalization()(L4)\n",
     "L5 = Activation('relu')(L5)\n",
     "#L6 = Lambda(maxpool_2,output_shape = shape)(L5)\n",
     "L6 = MaxPooling2D(pool_size=(2,2))(L5)\n",
-    "L7 = Conv2D(64,kernel_size=(3,3),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L6)\n",
+    "L7 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L6)\n",
     "L8 = BatchNormalization()(L7)\n",
     "L8 = Activation('relu')(L8)\n",
     "#L9 = Lambda(maxpool_3,output_shape = shape)(L8)\n",
     "L9 = MaxPooling2D(pool_size=(2,2))(L8)\n",
-    "L10 = Conv2D(64,kernel_size=(3,3),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L9)\n",
+    "L10 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L9)\n",
     "L11 = BatchNormalization()(L10)\n",
     "L11 = Activation('relu')(L11)\n",
     "L12 = UpSampling2D(size = (2,2))(L11)\n",
     "#L12 = Lambda(unpool_3,output_shape = unpool_shape)(L11)\n",
     "L13 = Concatenate(axis = 3)([L8,L12])\n",
-    "L14 = Conv2D(64,kernel_size=(3,3),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L13)\n",
+    "L14 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L13)\n",
     "L15 = BatchNormalization()(L14)\n",
     "L15 = Activation('relu')(L15)\n",
     "L16 = UpSampling2D(size= (2,2))(L15)\n",
     "#L16 = Lambda(unpool_2,output_shape=unpool_shape)(L15)\n",
     "L17 = Concatenate(axis = 3)([L16,L5])\n",
-    "L18 = Conv2D(64,kernel_size=(3,3),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L17)\n",
+    "L18 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L17)\n",
     "L19 = BatchNormalization()(L18)\n",
     "L19 = Activation('relu')(L19)\n",
     "#L20 = Lambda(unpool_1,output_shape=unpool_shape)(L19)\n",
     "L20 = UpSampling2D(size=(2,2),name = \"Layer19\")(L19)\n",
     "L21 = Concatenate(axis=3)([L20,L2])\n",
-    "L22 = Conv2D(64,kernel_size=(3,3),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L21)\n",
+    "L22 = Conv2D(64,kernel_size=(k,s),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L21)\n",
     "L23 = BatchNormalization()(L22)\n",
     "L23 = Activation('relu')(L23)\n",
     "L24 = Conv2D(8,kernel_size=(1,1),padding = \"same\",kernel_regularizer=regularizers.l2(weight_decay))(L23)\n",
@@ -166,8 +166,8 @@
     "# Setting the directories\n",
     "import os\n",
     "\n",
-    "wanted_folder = 'alldata/'\n",
-    "# wanted_folder = 'pruned/'\n",
+    "# wanted_folder = 'alldata/'\n",
+    "wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
@@ -197,8 +197,10 @@
    },
    "outputs": [],
    "source": [
-    "saved_name = 'normalised_bs_40_ep_200'\n",
-    "model.load_weights(check_directory+\"/models/Normalised/\"+saved_name+\".hdf5\")"
+    "# saved_name = 'lr_003_bs_40_ep_200'\n",
+    "saved_name = 'ks_{}{}_bs_7_ep_40'.format(k,s)\n",
+    "result_sub_folder = \"/Kernel/\"\n",
+    "model.load_weights(check_directory+\"/models\"+result_sub_folder+saved_name+\".hdf5\")"
    ]
   },
   {
@@ -210,10 +212,9 @@
    "outputs": [],
    "source": [
     "# filenames, raw_images = get_data(cwd+'whole_raw_image','.tif')\n",
-    "filenames, raw_images = get_data(\"/home/sim/notebooks/relaynet_pytorch/datasets/OCTData/pruned/\"+'normalised_raw_image','.png')\n",
-    "# filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
+    "filenames, raw_images = get_data(cwd+'normalised_raw_image','.png')\n",
     "\n",
-    "save_name = results_folder + '/Pruned/'+ 'tf_' + 'whole' + '.npy'\n",
+    "save_name = results_folder + result_sub_folder + 'tf_' + 'ks_'+str(k)+str(s)+ '.npy'\n",
     "print(len(raw_images))\n",
     "print (raw_images[0].shape)\n",
     "plt.imshow(raw_images[2],cmap = \"gray\")"
