Updated results for Normalised or not

--- a/Sim_Run_Relaynet.ipynb
+++ b/Sim_Run_Relaynet.ipynb
@@ -116,35 +116,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# SEG_LABELS_LIST = [\n",
-    "#     {\"id\": -1, \"name\": \"void\", \"rgb_values\": [0, 0, 0]},\n",
-    "#     {\"id\": 0, \"name\": \"Region above the retina (RaR)\", \"rgb_values\": [128, 0, 0]}, # dark red\n",
-    "#     {\"id\": 1, \"name\": \"ILM: Inner limiting membrane\", \"rgb_values\": [0, 128, 0]}, # green\n",
-    "#     {\"id\": 2, \"name\": \"NFL-IPL: Nerve fiber ending to Inner plexiform layer\", \"rgb_values\": [128, 128, 0]}, # weird green\n",
-    "#     {\"id\": 3, \"name\": \"INL: Inner Nuclear layer\", \"rgb_values\": [0, 0, 128]}, # dark blue\n",
-    "#     {\"id\": 4, \"name\": \"OPL: Outer plexiform layer\", \"rgb_values\": [128, 0, 128]}, # purple\n",
-    "#     {\"id\": 5, \"name\": \"ONL-ISM: Outer Nuclear layer to Inner segment myeloid\", \"rgb_values\": [0, 128, 128]},\n",
-    "#     {\"id\": 6, \"name\": \"ISE: Inner segment ellipsoid\", \"rgb_values\": [128, 128, 128]},\n",
-    "#     {\"id\": 7, \"name\": \"OS-RPE: Outer segment to Retinal pigment epithelium\", \"rgb_values\": [64, 0, 0]},\n",
-    "#     {\"id\": 8, \"name\": \"Region below RPE (RbR)\", \"rgb_values\": [192, 0, 0]}];\n",
-    "    #{\"id\": 9, \"name\": \"Fluid region\", \"rgb_values\": [64, 128, 0]}];\n",
-    "    \n",
-    "    \n",
     "SEG_LABELS_LIST = [\n",
-    "#     {\"id\": -1, \"name\": \"void\", \"rgb_values\": [0, 0, 0]},\n",
-    "    {\"id\": 0, \"name\": \"void\", \"rgb_values\": [0, 0, 0]}, # black\n",
-    "    {\"id\": 1, \"name\": \"Myocardium\", \"rgb_values\": [255,0,0]}, # red\n",
-    "    {\"id\": 2, \"name\": \"Endocardium\", \"rgb_values\": [0, 0, 255]}, # blue\n",
-    "    {\"id\": 3, \"name\": \"Fibrosis\", \"rgb_values\": [177,10,255]}, # purple\n",
-    "    {\"id\": 4, \"name\": \"Fat\", \"rgb_values\": [0, 255, 0]}, # green\n",
-    "    {\"id\": 5, \"name\": \"Dense Collagen\", \"rgb_values\": [255, 140, 0]}, # orange\n",
-    "    {\"id\": 6, \"name\": \"Loose Collagen\", \"rgb_values\": [255, 255, 0]}, # yellow\n",
-    "    {\"id\": 7, \"name\": \"Smooth Muscle\", \"rgb_values\": [255,0,255]}# magenta/pink\n",
-    "]; \n",
+    "    {\"id\": -1, \"name\": \"void\", \"rgb_values\": [0, 0, 0]},\n",
+    "    {\"id\": 0, \"name\": \"Region above the retina (RaR)\", \"rgb_values\": [128, 0, 0]}, # dark red\n",
+    "    {\"id\": 1, \"name\": \"ILM: Inner limiting membrane\", \"rgb_values\": [0, 128, 0]}, # green\n",
+    "    {\"id\": 2, \"name\": \"NFL-IPL: Nerve fiber ending to Inner plexiform layer\", \"rgb_values\": [128, 128, 0]}, # weird green\n",
+    "    {\"id\": 3, \"name\": \"INL: Inner Nuclear layer\", \"rgb_values\": [0, 0, 128]}, # dark blue\n",
+    "    {\"id\": 4, \"name\": \"OPL: Outer plexiform layer\", \"rgb_values\": [128, 0, 128]}, # purple\n",
+    "    {\"id\": 5, \"name\": \"ONL-ISM: Outer Nuclear layer to Inner segment myeloid\", \"rgb_values\": [0, 128, 128]},\n",
+    "    {\"id\": 6, \"name\": \"ISE: Inner segment ellipsoid\", \"rgb_values\": [128, 128, 128]},\n",
+    "    {\"id\": 7, \"name\": \"OS-RPE: Outer segment to Retinal pigment epithelium\", \"rgb_values\": [64, 0, 0]},\n",
+    "    {\"id\": 8, \"name\": \"Region below RPE (RbR)\", \"rgb_values\": [192, 0, 0]},\n",
+    "    {\"id\": 9, \"name\": \"Fluid region\", \"rgb_values\": [64, 128, 0]}\n",
+    "    ];\n",
+    "    \n",
+    "    \n",
+    "# SEG_LABELS_LIST = [\n",
+    "# #     {\"id\": -1, \"name\": \"void\", \"rgb_values\": [0, 0, 0]},\n",
+    "#     {\"id\": 0, \"name\": \"void\", \"rgb_values\": [0, 0, 0]}, # black\n",
+    "#     {\"id\": 1, \"name\": \"Myocardium\", \"rgb_values\": [255,0,0]}, # red\n",
+    "#     {\"id\": 2, \"name\": \"Endocardium\", \"rgb_values\": [0, 0, 255]}, # blue\n",
+    "#     {\"id\": 3, \"name\": \"Fibrosis\", \"rgb_values\": [177,10,255]}, # purple\n",
+    "#     {\"id\": 4, \"name\": \"Fat\", \"rgb_values\": [0, 255, 0]}, # green\n",
+    "#     {\"id\": 5, \"name\": \"Dense Collagen\", \"rgb_values\": [255, 140, 0]}, # orange\n",
+    "#     {\"id\": 6, \"name\": \"Loose Collagen\", \"rgb_values\": [255, 255, 0]}, # yellow\n",
+    "#     {\"id\": 7, \"name\": \"Smooth Muscle\", \"rgb_values\": [255,0,255]}# magenta/pink\n",
+    "# ]; \n",
     "\n",
     "def label_img_to_rgb(label_img):\n",
     "    label_img = np.squeeze(label_img)\n",
@@ -183,6 +184,7 @@
     "    idxs = idxs.data.cpu().numpy()\n",
     "    idxs = label_img_to_rgb(idxs)\n",
     "    plt.imshow(idxs)\n",
+    "    plt.axis('off')\n",
     "    plt.show()"
    ]
   },
@@ -210,6 +212,7 @@
     "    plt.subplot(Nx, Ny, i)  # next plot will be shown in\n",
     "                        # first subplot in Nx x Ny\n",
     "                        # matrix of subplots\n",
+    "    plt.axis('off')\n",
     "    plt.imshow(idxs)"
    ]
   },
@@ -443,7 +446,7 @@
    },
    "outputs": [],
    "source": [
-    "used_image = 3\n",
+    "used_image = 4\n",
     "# used_image = 'test_image'\n",
     "\n",
     "if used_image == 1:\n",
@@ -453,11 +456,11 @@
     "    image_file = '/datasets/DenoiseImages/DenoisedTrainImages/denoised_5.png'\n",
     "    # Ventricle\n",
     "elif used_image == 3:\n",
-    "    image_file = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/con_H1_N01848_LV_1_194.tif'\n",
-    "    gnd_truth_image = '/datasets/OCTData/Ventricle/H1_N01848_LV_1_194/label_H1_N01848_LV_1_194.JPG'\n",
+    "    image_file = '/datasets/OCTData/pruned/whole_raw_image/con_H1_N01848_LV_1_194.tif'\n",
+    "    gnd_truth_image = '/datasets/OCTData/pruned/manual_label/label_H1_N01848_LV_1_194.JPG'\n",
     "elif used_image == 4:\n",
-    "    image_file = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/con_H1_N01848_LA_1_272.tif'\n",
-    "    gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
+    "    image_file = '/datasets/OCTData/pruned/whole_raw_image/con_H1_N01848_LA_1_272.tif'\n",
+    "    gnd_truth_image = '/datasets/OCTData/pruned/manual_label/label_H1_N01848_LA_1_272.JPG'\n",
     "elif used_image == 5:\n",
     "    image_file = '/datasets/con_H1_N01848_LA_1_272_denoised.png'\n",
     "    gnd_truth_image = '/datasets/OCTData/Atrium/H1_N01848_LA_1_272/label_H1_N01848_LA_1_272.JPG'\n",
@@ -465,7 +468,9 @@
     "    image_file = '/datasets/test_image.png'\n",
     "\n",
     "# Seeing whether image_file exists\n",
+    "print(cwd)\n",
     "raw_image_path = cwd + image_file\n",
+    "print(raw_image_path)\n",
     "image = plt.imread(raw_image_path)\n",
     "test_data = image    \n",
     "\n",
@@ -604,26 +609,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# # Settings for segmentation\n",
-    "# seg_test = np.squeeze(test_data)\n",
-    "# height, width = seg_test.shape\n",
-    "# left_bound = 0\n",
-    "# right_bound = width\n",
-    "# split = m_of_e(44) # must be mutiples of 8 \n",
-    "# Ny = width/split\n",
-    "# Nx = 1\n",
+    "# Settings for segmentation\n",
+    "seg_test = np.squeeze(test_data.T)\n",
+    "height, width = seg_test.shape\n",
+    "left_bound = 0\n",
+    "right_bound = width\n",
+    "split = m_of_e(64) # must be mutiples of 8 \n",
+    "Ny = width/split\n",
+    "Nx = 1\n",
     "\n",
-    "# print(\"Split:\",split)\n",
+    "print(\"Split:\",split)\n",
     "\n",
-    "# # Show Segmentations\n",
-    "# # get_segmented_image(seg_test, height, width, left_bound, right_bound, split, Ny, Nx)\n",
+    "# Show Segmentations\n",
+    "get_segmented_image(seg_test, height, width, left_bound, right_bound, split, Ny, Nx)\n",
     "\n",
-    "# # Show other images\n",
-    "# # show_data(test_data, legend=False, transpose=False)"
+    "# Show other images\n",
+    "show_data(test_data, show_legend=False, transpose=True)"
    ]
   },
   {
@@ -648,7 +654,7 @@
    },
    "outputs": [],
    "source": [
-    "show_data(test_data, show_legend=False, transpose=True)"
+    "# show_data(test_data, show_legend=False, transpose=True)"
    ]
   },
   {
@@ -666,7 +672,7 @@
    },
    "outputs": [],
    "source": [
-    "show_data(test_data, show_legend = False, transpose=False)"
+    "# show_data(test_data, show_legend = False, transpose=False)"
    ]
   },
   {
